<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:map="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/map" tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Logo"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#000000"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha=".8">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_string"
            android:id="@+id/button"
            android:visibility="invisible"
            android:background="#ffffff"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spacious_string"
            android:id="@+id/button2"
            android:layout_alignTop="@+id/button"
            android:layout_toRightOf="@+id/button"
            android:layout_toEndOf="@+id/button"
            android:visibility="invisible"
            android:background="#ffffff"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_string"
            android:id="@+id/button3"
            android:layout_alignTop="@+id/button2"
            android:layout_toRightOf="@+id/button2"
            android:layout_toEndOf="@+id/button2"
            android:visibility="invisible"
            android:background="#ffffff"
            android:layout_marginBottom="10dp" />

        <ImageView
            android:layout_width="133dp"
            android:layout_height="133dp"
            android:id="@+id/imageView2"
            android:layout_column="3"
            android:src="@drawable/smile"
            android:visibility="invisible"
            android:scaleType="fitXY"
            android:layout_toStartOf="@+id/button2"
            android:layout_toLeftOf="@+id/button2"
            android:layout_alignBottom="@+id/textView6" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:id="@+id/textView4"
            android:layout_alignParentTop="true"
            android:visibility="invisible"
            android:background="#ffffff"
            android:layout_toLeftOf="@+id/textView7"
            android:layout_toRightOf="@+id/imageView2"
            android:layout_toEndOf="@+id/imageView2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/estimate_string"
            android:id="@+id/textView5"
            android:visibility="invisible"
            android:layout_below="@+id/textView4"
            android:layout_toRightOf="@+id/imageView2"
            android:background="#ffffff"
            android:layout_alignRight="@+id/button3"
            android:layout_alignEnd="@+id/button3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/last_bus_string"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView5"
            android:layout_toRightOf="@+id/imageView2"
            android:visibility="invisible"
            android:layout_gravity="left|center_vertical"
            android:layout_alignRight="@+id/textView5"
            android:layout_alignEnd="@+id/textView5"
            android:background="#ffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="TIME"
            android:id="@+id/textView3"
            android:layout_alignBaseline="@+id/textView6"
            android:layout_alignBottom="@+id/textView6"
            android:layout_toRightOf="@+id/textView5"
            android:layout_toEndOf="@+id/textView5"
            android:background="#ffffff"
            android:visibility="invisible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="TIME"
            android:id="@+id/textView7"
            android:layout_above="@+id/textView3"
            android:layout_toRightOf="@+id/textView5"
            android:layout_toEndOf="@+id/textView5"
            android:background="#ffffff"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Please report status!"
            android:id="@+id/textView8"
            android:layout_above="@+id/button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/button3"
            android:layout_alignEnd="@+id/button3"
            android:textAlignment="center"
            android:visibility="invisible" />

    </RelativeLayout>

</RelativeLayout>




